; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_hash.c_hashTypeCurrentObject.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_hash.c_hashTypeCurrentObject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@OBJ_ENCODING_ZIPLIST = common dso_local global i64 0, align 8
@OBJ_ENCODING_HT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"Unknown hash encoding\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hashTypeCurrentObject(%struct.TYPE_5__* %0, i32 %1, i8** %2, i32* %3, i64* %4) #0 {
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8** %2, i8*** %8, align 8
  store i32* %3, i32** %9, align 8
  store i64* %4, i64** %10, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @OBJ_ENCODING_ZIPLIST, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %25

17:                                               ; preds = %5
  %18 = load i8**, i8*** %8, align 8
  store i8* null, i8** %18, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i8**, i8*** %8, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = load i64*, i64** %10, align 8
  %24 = call i32 @hashTypeCurrentFromZiplist(%struct.TYPE_5__* %19, i32 %20, i8** %21, i32* %22, i64* %23)
  br label %44

25:                                               ; preds = %5
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @OBJ_ENCODING_HT, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %41

31:                                               ; preds = %25
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %33 = load i32, i32* %7, align 4
  %34 = call i64 @hashTypeCurrentFromHashTable(%struct.TYPE_5__* %32, i32 %33)
  store i64 %34, i64* %11, align 8
  %35 = load i64, i64* %11, align 8
  %36 = inttoptr i64 %35 to i8*
  %37 = load i8**, i8*** %8, align 8
  store i8* %36, i8** %37, align 8
  %38 = load i64, i64* %11, align 8
  %39 = call i32 @sdslen(i64 %38)
  %40 = load i32*, i32** %9, align 8
  store i32 %39, i32* %40, align 4
  br label %43

41:                                               ; preds = %25
  %42 = call i32 @serverPanic(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %43

43:                                               ; preds = %41, %31
  br label %44

44:                                               ; preds = %43, %17
  ret void
}

declare dso_local i32 @hashTypeCurrentFromZiplist(%struct.TYPE_5__*, i32, i8**, i32*, i64*) #1

declare dso_local i64 @hashTypeCurrentFromHashTable(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @sdslen(i64) #1

declare dso_local i32 @serverPanic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
